gitのアップロード指定のファイルからimage_conversion/input, outputのファイルの中身を無視するように

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ myenv/
 __pycache__/
 .DS_Store
 .env
+
+# image_Conversionディレクトリのinputとoutputディレクトリの中身を無視
+image_Conversion/input/*
+image_Conversion/output/*
+gitにあげるファイルの変更
